# github-event-monitor

./: .gitignore  README.md  architecture.mermaid  c4_level1.mermaid  explore.ipynb  main.py  pyproject.toml
.github/workflows/: python-app.yml
data/bronze/: github_events_20250511_231630.json  github_events_20250511_231631.json  github_events_20250511_231633.json  github_events_20250511_231650.json  github_events_20250511_231651.json  github_events_20250511_231653.json  github_events_20250511_231705.json  github_events_20250511_231706.json  github_events_20250511_231708.json  github_events_20250511_231720.json  github_events_20250511_231722.json  github_events_20250511_231723.json  github_events_20250511_231735.json  github_events_20250511_231736.json  github_events_20250511_231738.json  github_events_20250511_231750.json  github_events_20250511_231752.json  github_events_20250511_231753.json  github_events_20250511_231805.json  github_events_20250511_231806.json  github_events_20250511_231808.json  github_events_20250511_231820.json  github_events_20250511_231822.json  github_events_20250511_231823.json  github_events_20250511_231835.json  github_events_20250511_231836.json  github_events_20250511_231838.json  github_events_20250511_231850.json  github_events_20250511_231852.json  github_events_20250511_231854.json  github_events_20250511_231905.json  github_events_20250511_231906.json  github_events_20250511_231908.json  github_events_20250511_231920.json  github_events_20250511_231921.json  (+265 more)
github_event_monitor/: __init__.py  api.py  config.py  database.py  models.py  pipeline.py  visualization.py
(+4 files in other folders)
